# license

./: .gitignore  CLAUDE.md  Cargo.toml  rustfmt.toml
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
.sqlx/: query-348fe509bd0a8b288627b2dcdc14a866dd01c7ece3439d0332306b6820bc67ca.json  query-49b999a7d6180446efcc0a6f9b1a6241b5ad3f82438efa31de675d1a4cc8a711.json  query-7deab90012720871db7cd452acae399ffa7f8061d696db9b7fadc185461742b8.json  query-ba8db2ef83299b4f9f8b4222074e764cbfdb85019e95c5e64419555a45ef73c7.json  query-ecc6ab6242214b64ece000df0bb28a632cc7de3017f00b6b9a9aea6309fc76ac.json
migration/: Cargo.toml
migration/src/: lib.rs  m20251214_000001_create_users.rs  m20251214_000002_create_licenses.rs  m20251214_000003_create_user_stats.rs  m20251214_000004_create_builds.rs  m20251214_000005_create_claimed_promos.rs  m20251214_000006_create_free_games.rs  m20251218_000007_add_detailed_stats.rs  m20251218_000009_create_free_items.rs
src/: bot.rs  error.rs  handlers.rs  main.rs  model.rs  prelude.rs  state.rs  utils.rs
src/entities/: build.rs  claimed_promo.rs  license.rs  mod.rs  prelude.rs  user.rs  user_stats.rs
src/entity/: free_game.rs  free_item.rs  mod.rs  stats.rs
src/migration/: m20251214_000001_create_users.rs  m20251214_000002_create_licenses.rs  m20251214_000003_create_user_stats.rs  m20251214_000004_create_builds.rs  m20251214_000005_create_claimed_promos.rs  mod.rs
src/plugins/: mod.rs  steam.rs
src/plugins/server/: handlers.rs  mod.rs  steam.rs
src/plugins/telegram/: callback.rs  command.rs  mod.rs
src/services/: build.rs  license.rs  mod.rs  stats.rs  user.rs
src/sv/: build.rs  license.rs  mod.rs  stats.rs  steam.rs  user.rs
