[package]
name = "license"
version = "0.0.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"
teloxide = { version = "0.17", features = ["macros"] }

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
base64 = { version = "0.22.1" }

dashmap = "6.1"
thiserror = "2.0"
dotenvy = "0.15"
anyhow = "1.0"
async-trait = "0.1"
flate2 = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[features]
default = []
